--- a/_assets/sass/components/_buttons.scss
+++ b/_assets/sass/components/_buttons.scss
@@ -17,6 +17,15 @@
   &--orange { background-color: $orange;
     &:hover { background-color: $orange-dark; }
   }
+  &--white {
+    color: $grey-dark;
+    background-color: rgba($white,.85);
+    &:hover { background-color: $white; }
+  }
+  &--black {
+    background-color: $l-black;
+    &:hover { background-color: $black; }
+  }
   &--outline {
     color: inherit;
     &:before {
@@ -36,8 +45,17 @@
   &--outline-orange {
     &:before { border-color: $orange; }
     &:hover {
+      color: $white;
       background-color: $orange;
       &:before { border-color: $orange; }
+    }
+  }
+  &--outline-black {
+    &:before { border-color: $l-black; }
+    &:hover {
+      color: $white;
+      background-color: $l-black;
+      &:before { border-color: $l-black; }
     }
   }
 }
