--- a/_assets/sass/components/bg-img/_content.scss
+++ b/_assets/sass/components/bg-img/_content.scss
@@ -26,6 +26,13 @@
     color: $white;
     text-align: center;
     @include page-padding;
+    &--bottom-left {
+      left: $s2;
+      bottom: $s2;
+      padding: 0;
+      align-items: flex-end;
+      justify-content: flex-start;
+    }
   }
   &__bg-overlay {
     position: absolute;
