--- a/_assets/sass/components/_modal.scss
+++ b/_assets/sass/components/_modal.scss
@@ -6,6 +6,7 @@
   margin-left: ($icon-size / 2.5);
   margin-right: ($icon-size / 2.5);
   cursor: auto;
+  width: 100%;
   &.is-open   { display: block; }
   &.is-closed { display: none; }
   &__wrap {
