--- a/_assets/sass/grid/_grid.scss
+++ b/_assets/sass/grid/_grid.scss
@@ -157,11 +157,12 @@
 .width {
   margin-right: auto;
   margin-left: auto;
-  &--xxs { max-width: ($sm / 3); }
-  &--xs  { max-width: ($sm / 2); }
-  &--sm  { max-width: $sm; }
-  &--md  { max-width: $md; }
-  &--lg  { max-width: $lg; }
-  &--xl  { max-width: $xl; }
-  &--xxl { max-width: $xxl; }
+  &--xxs  { max-width: ($sm / 3); }
+  &--xs   { max-width: ($sm / 2); }
+  &--sm   { max-width: $sm; }
+  &--md   { max-width: $md; }
+  &--lg   { max-width: $lg; }
+  &--xl   { max-width: $xl; }
+  &--xxl  { max-width: $xxl; }
+  &--xxxl { max-width: $xxxl; }
 }
