--- a/_includes/page/banner.html
+++ b/_includes/page/banner.html
@@ -4,11 +4,14 @@
   <div class="banner__wrap">
     {% if page.banner.content %}
       {{page.banner.content | liquify}}
+    {% elsif layout.banner.content %}
+      {{layout.banner.content | liquify}}
     {% else %}
-      <div class="container container--no-padding text--center">
+      <div class="container container--no-padding">
         {% if page.banner.title-sup %}<h2 class="sub-title">{{page.banner.title-sup}}</h2>{% endif %}
         <h1 class="banner-title">{% if page.banner.title %}{{page.banner.title}}{% else %}{{page.title}}{% endif %}</h1>
         {% if page.banner.title-sub %}<h2 class="sub-title">{{page.banner.title-sub}}</h2>{% endif %}
+        <!-- <div class="banner-title__sub">Lexus</div> -->
       </div>
     {% endif %}
   </div>
