--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -41,7 +41,7 @@
   <!-- END Social Data -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|IBM+Plex+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="{{site.css}}/main.css">
-  {% if page.extra-css %}<link rel="stylesheet" href="{{site.css}}/{{page.id}}.css">{% endif %}
+  {% if page.extra-css or layout.extra-css %}<link rel="stylesheet" href="{{site.css}}/{{page.id}}.css">{% endif %}
   <script src="{{site.js}}/main.js"></script>
-  {% if page.extra-js %}<script src="{{site.js}}/{{page.id}}.js"></script>{% endif %}
+  {% if page.extra-js or layout.extra-js %}<script src="{{site.js}}/{{page.id}}.js"></script>{% endif %}
 </head>
