--- a/_includes/nav/core-list.html
+++ b/_includes/nav/core-list.html
@@ -1,6 +1,6 @@
 <div class="{{include.block}}">
-  <a class="{{include.block}}-link" href="https://www.secretescapes.com/current-sales">Current Sales</a>
-  <a class="{{include.block}}-link" href="https://www.secretescapes.com/spa">Spa</a>
-  <a class="{{include.block}}-link" href="https://www.secretescapes.com/smartstays/filter">Smart Stays</a>
-  <a class="{{include.block}}-link is-current" href="{{ site.baseurl }}">{{ site.title }}</a>
+  {% for item in site.secret-escapes.nav %}
+    {% assign processed-site-link = item.link | liquify %}
+    <a class="{{include.block}}-link{% if processed-site-link == site.baseurl %} is-current{% endif %}" href="{{processed-site-link}}">{{item.title | liquify }}</a>
+  {% endfor %}
 </div>
