--- a/_includes/page/footer.html
+++ b/_includes/page/footer.html
@@ -6,7 +6,7 @@
       {% include components/logo-partner.html placement="footer" small='true' %}
     </div>
     <div class="space--sm text--sm">
-      <p>© Copyright <span class="js-year">2018</span> Secret Escapes</p>
+      <p>{{site.copyright}}</p>
     </div>
   </div>
 </footer>
