--- a/_includes/page/promo-offers.html
+++ b/_includes/page/promo-offers.html
@@ -11,7 +11,7 @@
         <div class="container container--no-padding container--lg">
           <p class="text--lg vpad--xxs">Didn’t see anything here to take your fancy? Well, we have loads more offers with savings of up to 60%!</p>
           <div class="space--sm"></div>
-          <a id="track-btn-current-sales" href="{{site.core-se-link}}" class="btn btn--orange">See All Current Sales</a>
+          <a id="track-btn-current-sales" href="{{site.secret-escapes.current-sales}}" class="btn btn--orange">See All Current Sales</a>
         </div>
       </div>
     </div>
