--- a/_assets/sass/nav/_site-group.scss
+++ b/_assets/sass/nav/_site-group.scss
@@ -31,15 +31,16 @@ $group-nav-color:  $white;
     align-items: center;
     justify-content: center;
     padding: $s0;
-    font-family: $font-core;
-    font-size: $s0;
-    font-weight: 600;
+    font-family: $font-title-01;
+    font-size: $s3;
+    font-weight: 500;
     text-align: center;
     text-transform: uppercase;
-    letter-spacing: .15em;
-    color: $grey-darker;
+    letter-spacing: .075em;
+    color: $white;
+    background-color: rgba($l-black,.2);
     @include transition;
-    &.is-current      { background-color: rgba($group-nav-color,.66); }
-    .no-touch &:hover { background-color: rgba($group-nav-color,1); }
+    &.is-current      { background-color: rgba($l-black,.6); }
+    .no-touch &:hover { background-color: rgba($l-black,.4); }
   }
 }
