--- a/_includes/page/banner.html
+++ b/_includes/page/banner.html
@@ -1,5 +1,6 @@
-<div class="banner">
+<div class="banner{% if page.id == "overview" %} banner--overview{% endif %}">
   <div class="site-header__offset"></div>
+  {% if page.id == "overview" %}<div class="site-nav__offset"></div>{% endif %}
   <div class="banner__bg" style="background-image: url('{{site.img}}/content/{{page.id}}/bg.jpg')"></div>
   <div class="banner__wrap">
     {% if page.banner.content %}
@@ -8,11 +9,18 @@
       {{layout.banner.content | liquify}}
     {% else %}
       <div class="container container--no-padding">
-        {% if page.banner.title-sup %}<h2 class="sub-title">{{page.banner.title-sup}}</h2>{% endif %}
-        <h1 class="banner-title">{% if page.banner.title %}{{page.banner.title}}{% else %}{{page.title}}{% endif %}</h1>
-        {% if page.banner.title-sub %}<h2 class="sub-title">{{page.banner.title-sub}}</h2>{% endif %}
-        <!-- <div class="banner-title__sub">Lexus</div> -->
+        <div class="width--lg">
+          {% if page.banner.title-sup %}<h2 class="sub-title">{{page.banner.title-sup}}</h2>{% endif %}
+          <h1 class="banner-title">{% if page.banner.title %}{{page.banner.title | liquify}}{% else %}{{page.title}}{% endif %}</h1>
+          {% if page.banner.title-sub %}<h2 class="banner-sub-title">{{page.banner.title-sub}}</h2>{% endif %}
+        </div>
       </div>
     {% endif %}
   </div>
+  {% if page.id == "overview" %}
+    <a href="#guides" class="banner__jump-down"></a>
+    <div class="banner__bg-video">
+      <video id="banner-video" src="{{site.video}}/video.mp4" height="100%" playsinline loop muted autoplay></video>
+    </div>
+  {% endif %}
 </div>
