--- a/_assets/sass/design-hotels.scss
+++ b/_assets/sass/design-hotels.scss
@@ -66,7 +66,7 @@
     height: 40px;
     width: 40px;
     background-size: auto 15px;
-    background-color: rgba($white, .5);
+    background-color: rgba($white, .75);
     background-repeat: no-repeat;
     background-position: center;
     @include transition;
@@ -77,16 +77,18 @@
     }
     &:hover {
       cursor: pointer;
-      background-color: rgba($grey-light, .5);
+      background-color: $white;
+      border-color: $white; // this just removes the border when the right arrow is on hover
     }
     &--left {
-      background-image: url('../img/icons/arrow-left.svg');
+      background-image: url('../img/icons/arrow-dark-left.svg');
       background-position: 45% 50%;
     }
     &--right {
-      border-left: 1px solid rgba($white, .5);
-      background-image: url('../img/icons/arrow-right.svg');
+      border-left: 1px solid rgba($l-black, .5);
+      background-image: url('../img/icons/arrow-dark-right.svg');
       background-position: 55% 50%;
     }
+    &:hover + &--right { border-color: $white; } // this just removes the border when the left arrow is on hover
   }
 }
