--- a/_layouts/competition.html
+++ b/_layouts/competition.html
@@ -14,7 +14,7 @@ banner:
 <div class="vpad--xl">
   <div class="container">
     <div class="width width--xl text--center">
-      <p class="text--xxl">{{site.description}}</p>
+      <p class="text--xxl">{{page.intro}}</p>
     </div>
   </div>
 </div>
