--- a/_includes/page/promo-test-drive.html
+++ b/_includes/page/promo-test-drive.html
@@ -3,7 +3,7 @@
     <div class="width width--xl text--center">
       <h2 class="title title--xxl">{{site.test-drive.title}}</h2>
       <div class="width width--lg">
-        <p class="text--lg text--normal vpad--xxs">{{site.test-drive.description}}</p>
+        <p class="text--xxl text--normal vpad--xxs">{{site.test-drive.description}}</p>
         <div class="space--sm"></div>
         <a id="track-btn-promo-test-drive" href="{{site.test-drive.url}}" class="btn btn--white js-open-td-modal">{{site.test-drive.cta}}</a>
       </div>
