--- a/_layouts/lexus-ux.html
+++ b/_layouts/lexus-ux.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-<div class="vpad--xl">
+<div class="vpad--xxl">
   <div class="container">
     <div class="width--xl">
       <p class="text--xxl">{{page.intro}}</p>
-      <div class="inline-buttons space--sm">
-        <a href="{{site.test-drive.url}}" class="btn btn--black js-open-td-modal">{{site.test-drive.cta}}</a>
-        <a href="#download-pdf" class="btn btn--outline btn--outline-black">Download Brochure</a>
+      <div class="inline-buttons space--md">
+        {% for item in page.intro-links %}
+          <a href="{{item.link | liquify}}" class="btn{% if item.main-cta %} btn--black{% else %} btn--outline btn--outline-black{% endif %}{% if item.td-modal %} js-open-td-modal{% endif %}">{{item.title | liquify}}</a>
+        {% endfor %}
       </div>
     </div>
   </div>
@@ -27,7 +28,7 @@ layout: default
           <h2 class="title title--md">{{feature.title}}</h2>
           <p>{{feature.description}}</p>
           <div class="space--md"></div>
-          <a href="{{feature.link}}" class="btn btn--outline btn--outline-black">Find Out More</a>
+          <a href="{{feature.link}}" class="btn btn--outline btn--outline-black">{{page.feature-cta}}</a>
         </div>
       </div>
     {% endfor %}
