bug: duplicate site.video reference
There is already a site.video reference for the asset file path. Site would show, but then error on build

--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -11,7 +11,7 @@ banner:
       <div class="text--normal width--lg space--sm">
         <p class=" text--xxl">{{site.description}}</p>
         <div class="space--md"></div>
-        <a href="{{site.video.url}}" class="btn btn--white js-open-modal" data-open-modal="feature-video">{{site.video.cta}}</a>
+        <a href="{{site.feature-video.url}}" class="btn btn--white js-open-modal" data-open-modal="feature-video">{{site.feature-video.cta}}</a>
       </div>
     </div>
 ---
