hide feature video

--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -10,8 +10,8 @@ banner:
       </div>
       <div class="text--normal width--lg space--sm">
         <p class=" text--xxl">{{site.description}}</p>
-        <div class="space--md"></div>
-        <a href="{{site.feature-video.url}}" class="btn btn--white js-open-modal" data-open-modal="feature-video">{{site.feature-video.cta}}</a>
+        <!-- <div class="space--md"></div> -->
+        <!-- <a href="{{site.feature-video.url}}" class="btn btn--white js-open-modal" data-open-modal="feature-video">{{site.feature-video.cta}}</a> -->
       </div>
     </div>
 ---
