--- a/_assets/sass/components/_td-modal.scss
+++ b/_assets/sass/components/_td-modal.scss
@@ -8,12 +8,12 @@
   z-index: $z-overlay;
   width: 100%;
   min-height: 100%;
-  background-color: rgba($white,.5);
+  background-color: $white;
   &.is-open   { display: block; }
   &.is-closed { display: none; }
   &__close {
     position: absolute;
-    right: 0;
+    left: 0;
     top: 0;
     height: $icon-size;
     width: $icon-size;
