--- a/_assets/sass/typography/_families.scss
+++ b/_assets/sass/typography/_families.scss
@@ -4,3 +4,4 @@
 
 $font-core: 'Open Sans', 'Helvetica Neue', sans-serif;
 $font-title-01: 'IBM Plex Sans', 'Helvetica Neue', sans-serif;
+$font-title-02: 'IBM Plex Sans Condensed', 'Helvetica Neue', sans-serif;
