--- a/_includes/page/promo-test-drive.html
+++ b/_includes/page/promo-test-drive.html
@@ -1,9 +1,9 @@
-<div class="vpad--xxxxl bg--img text--white" style="background-image: url('{{site.img}}/promo-test-drive.jpg');">
+<div class="vpad--xxxl bg--img text--white" style="background-image: url('{{site.img}}/promo-test-drive.jpg');">
   <div class="container">
-    <div class="width width--xl text--center">
-      <h2 class="title title--xxl">{{site.test-drive.title}}</h2>
-      <div class="width width--lg">
-        <p class="text--xxl text--normal vpad--xxs">{{site.test-drive.description}}</p>
+    <div class="width width--lg text--center">
+      <h2 class="title title--xl">{{site.test-drive.title}}</h2>
+      <div class="width width--md">
+        <p class="text--xxxl text--normal vpad--xxs">{{site.test-drive.description}}</p>
         <div class="space--sm"></div>
         <a id="track-btn-promo-test-drive" href="{{site.test-drive.url}}" class="btn btn--white js-open-td-modal">{{site.test-drive.cta}}</a>
       </div>
