--- a/_layouts/guides.html
+++ b/_layouts/guides.html
@@ -7,10 +7,8 @@ layout: default
     <div class="width--xl">
       <p class="text--xxl">{{page.intro}}</p>
     </div>
-    <div class="width--xxl space--lg">
-      <div class="row row--6-6 space--lg">
-        {% include page/guide-nav.html %}
-      </div>
+    <div class="width--xxl">
+      {% include page/guide-nav.html %}
     </div>
   </div>
 </div>
