--- a/_layouts/lexus-ux.html
+++ b/_layouts/lexus-ux.html
@@ -27,8 +27,8 @@ layout: default
         <div class="bob__text">
           <h2 class="title title--md">{{feature.title}}</h2>
           <p>{{feature.description}}</p>
-          <div class="space--md"></div>
-          <a href="{{feature.link}}" class="btn btn--outline btn--outline-black">{{page.feature-cta}}</a>
+          <div class="space--sm"></div>
+          <a href="{{feature.link}}" class="btn btn--sm btn--outline btn--outline-black">{{page.feature-cta}}</a>
         </div>
       </div>
     {% endfor %}
