--- a/_includes/page/guide-nav.html
+++ b/_includes/page/guide-nav.html
@@ -1,12 +1,14 @@
-{% assign guide-pages = site.html_pages | where: "group-parent", "city-guides" | sort: "group-order"%}
-{% for page in guide-pages %}
-<div class="col">
-  <div class="bg-img bg-img--2-3" style="background-image: url({{site.img}}/content/{{page.id}}/nav-page.jpg);">
-    <a href="{{site.baseurl}}{{page.url}}" class="bg-img__link"></a>
-    <div class="bg-img__bg-overlay"></div>
-    <div class="bg-img__content bg-img__content--bottom-left">
-      <h3 class="bold-title">{{page.title}}</h3>
+<div class="row row--xl-6-6 space--lg">
+  {% assign guide-pages = site.html_pages | where: "group-parent", "city-guides" | sort: "group-order"%}
+  {% for page in guide-pages %}
+  <div class="col">
+    <div class="bg-img bg-img--2-3 guide" style="background-image: url({{site.img}}/content/{{page.id}}/nav-page.jpg);">
+      <a href="{{site.baseurl}}{{page.url}}" class="bg-img__link"></a>
+      <div class="bg-img__bg-overlay"></div>
+      <div class="bg-img__content bg-img__content--bottom-left">
+        <h3 class="bold-title">{{page.title}}</h3>
+      </div>
     </div>
   </div>
+  {% endfor %}
 </div>
-{% endfor %}
