--- a/_assets/sass/nav/_core.scss
+++ b/_assets/sass/nav/_core.scss
@@ -87,7 +87,7 @@ $logo-bp: 600px;
       flex-grow: 3; // needed for firefox
     }
     @include bp($nav-list-bp) {
-      width: 66.66%;
+      width: 80%;
       justify-content: flex-start;
     }
   }
@@ -101,6 +101,9 @@ $logo-bp: 600px;
     @include bp($logo-bp) {
       width: 33.33%;
       visibility: visible;
+    }
+    @include bp($nav-list-bp) {
+      width: 20%;
     }
   }
   &__list {
