--- a/_includes/page/banner.html
+++ b/_includes/page/banner.html
@@ -8,7 +8,7 @@
       {{layout.banner.content | liquify}}
     {% else %}
       <div class="container container--no-padding">
-        <div class="width--lg">
+        <div class="width--xxl">
           {% if page.banner.title-sup %}<h2 class="sub-title">{{page.banner.title-sup}}</h2>{% endif %}
           <h1 class="banner-title">{% if page.banner.title %}{{page.banner.title | liquify}}{% else %}{{page.title}}{% endif %}</h1>
           {% if page.banner.title-sub %}<h2 class="banner-sub-title">{{page.banner.title-sub}}</h2>{% endif %}
