missing hr class on main title

--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -6,7 +6,7 @@ banner:
     <div class="container container--no-padding">
       <div class="banner-title__wrap">
         <h1 class="banner-title">{{page.banner.title}}</h1>
-        <h2 class="banner-sub-title">{{page.banner.title-sub}}</h2>
+        <h2 class="banner-sub-title banner-sub-title--hr">{{page.banner.title-sub}}</h2>
       </div>
       <div class="text--normal width--lg space--sm">
         <p class=" text--xxl">{{site.description}}</p>
